Fixed loading and main

--- a/webshopstyle.css
+++ b/webshopstyle.css
@@ -28,11 +28,102 @@ html, body {
     width: 100%;
     color: hsl(var(--text-primary));
     font-family: var(--font-main);
-    background-color: hsl(var(--background));
+    background-color: hsl(var(--background-dark));
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
     scroll-behavior: smooth;
     box-sizing: border-box;
+}
+#loader {
+    top: 0;
+    width: 100%; height: 100%;
+    position: fixed;
+    background-color: hsl(var(--background-dark));
+    transition: all .25s cubic-bezier(var(--transition-main), 1);
+    z-index: 10000;
+}
+.loader-wrapper {
+    width: 2.5em; height: 2.5em;
+    position: relative;
+}
+.loader-icon {
+    width: 32px; height: 32px;
+    animation: loader-5-1 2s cubic-bezier(.770, 0, .175, 1) infinite;
+}
+@keyframes loader-5-1 {
+    0%   { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+.loader-icon::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: auto;
+    margin: auto;
+    width: 8px; height: 8px;
+    background: hsla(var(--primary), 1);
+    border-radius: 50%;
+    animation: loader-5-2 2s cubic-bezier(.770, 0, .175, 1) infinite;
+}
+@keyframes loader-5-2 {
+    0%   { transform: translate3d(0, 0, 0) scale(1); }
+    50%  { transform: translate3d(24px, 0, 0) scale(.5); }
+    100% { transform: translate3d(0, 0, 0) scale(1); }
+}
+.loader-icon::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0; left: auto; bottom: 0; right: 0;
+    margin: auto;
+    width: 8px; height: 8px;
+    background: hsla(var(--primary), .6);
+    border-radius: 50%;
+    animation: loader-5-3 2s cubic-bezier(.770, 0, .175, 1) infinite;
+}
+@keyframes loader-5-3 {
+    0%   { transform: translate3d(0, 0, 0) scale(1); }
+    50%  { transform: translate3d(-24px, 0, 0) scale(.5); }
+    100% { transform: translate3d(0, 0, 0) scale(1); }
+}
+.loader-icon span {
+    display: block;
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
+    margin: auto;
+    width: 32px; height: 32px;
+}
+.loader-icon span::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0; left: 0; bottom: auto; right: 0;
+    margin: auto;
+    width: 8px; height: 8px;
+    background: hsla(var(--primary), .8);
+    border-radius: 50%;
+    animation: loader-5-4 2s cubic-bezier(.770, 0, .175, 1) infinite;
+}
+@keyframes loader-5-4 {
+    0%   { transform: translate3d(0, 0, 0) scale(1); }
+    50%  { transform: translate3d(0, 24px, 0) scale(.5); }
+    100% { transform: translate3d(0, 0, 0) scale(1); }
+}
+.loader-icon span::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: auto; left: 0; bottom: 0; right: 0;
+    margin: auto;
+    width: 8px; height: 8px;
+    background: hsla(var(--primary), .4);
+    border-radius: 50%;
+    animation: loader-5-5 2s cubic-bezier(.770, 0, .175, 1) infinite;
+}
+@keyframes loader-5-5 {
+    0%   { transform: translate3d(0, 0, 0) scale(1); }
+    50%  { transform: translate3d(0, -24px, 0) scale(.5); }
+    100% { transform: translate3d(0, 0, 0) scale(1); }
 }
 .view-width {
     width: calc(100% - 6em);
@@ -182,10 +273,31 @@ html, body {
 #main {
     min-height: 100vh;
 }
-.promo-card {
+.promo-card-section {
     margin: 10em 0;
+}
+.promo-card-sec-top {
+    padding: 2em 0 4em 0;
+    border-top: 1px solid hsl(var(--black));
+}
+.promo-card-sec-title, .promo-card-sec-subtitle {
+    color: hsl(var(--black));
+    font-family: var(--font-title);
+}
+.promo-card-sec-title {
+    margin: 0;
+    font-size: var(--heading-medium);
+    font-weight: 500;
+}
+.promo-card-sec-subtitle {
+    margin: 0;
+    font-size: var(--paragraph);
+    font-weight: 500;
+}
+.promo-card {
+    width: 100%;
     display: grid;
-    grid-template-columns: 20% 1fr 20%;
+    grid-template-columns: auto 1fr auto;
 }
 .promo-card-left {}
 .promo-card-center {
@@ -198,7 +310,12 @@ html, body {
     gap: 2em;
 }
 .promo-card-title, .promo-card-price {
+    padding: 0 10rem 0 0;
     writing-mode:vertical-rl;
+    user-select: none;
+}
+.promo-card-price {
+    font-weight: 300;
 }
 /* Footer */
 #footer {
