--- a/webshopstyle.css
+++ b/webshopstyle.css
@@ -317,6 +317,60 @@ html, body {
 .promo-card-price {
     font-weight: 300;
 }
+.product-cards {
+    padding: 2em 0 6em 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 2em;
+    row-gap: 6em;
+}
+.product-card {
+    width: 100%;
+}
+.product-card-top {
+    margin: 0 0 1.5em 0;
+    width: 100%;
+}
+.product-card-title {
+    margin: 0;
+    font-size: calc(var(--paragraph) + .2rem);
+}
+.product-card-price {
+    margin: 0;
+    font-size: .9rem;
+}
+.product-card-image-wrapper {
+    width: 100%; height: 1fr;
+    position: relative;
+    overflow: hidden;
+}
+.product-card-image-wrapper::after {
+    content: "";
+    display: block;
+    padding-bottom: 140%;
+}
+.product-card-image {
+    min-width: 100%; min-height: 100%;
+    max-width: 110%;
+    position: absolute;
+    object-fit: cover;
+}
+.product-card-button {
+    bottom: 0;
+    margin: 1em;padding: 2em 0;
+    width: calc(100% - 2.25em);
+    display: block;
+    position: absolute;
+    color: hsl(var(--white));
+    background-color: hsla(var(--white), .15);
+    backdrop-filter: blur(.8rem);
+    font-weight: 300;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+    border: none;
+    cursor: pointer;
+    z-index: 5;
+}
 /* Footer */
 #footer {
     min-height: 20em;
