--- a/webshopstyle.css
+++ b/webshopstyle.css
@@ -292,6 +292,7 @@ html, body {
 .cart-menu-inner {}
 .cart-menu-wrapper {
     padding: 1.4em;
+    width: 40%; max-height: 25em;
     border-radius: 4px;
     background: linear-gradient(45deg, hsla(var(--white), .045) 0%, hsla(var(--white), .085) 100%);
     background-size: 500%;
@@ -302,7 +303,7 @@ html, body {
     0 70px 65px rgb(0 0 0 / 9%);
 }
 .cart-menu-title {
-    margin: 0; padding: 0 0 .75em 0;
+    margin: 0; padding: 0 0 .66em 0;
     width: 100%;
     color: hsl(var(--white));
     font-size: var(--paragraph);
@@ -310,8 +311,22 @@ html, body {
     border-bottom: 1px solid hsla(var(--white), .185);
 }
 .cart-menu-items {
+    width: 100%; height: 100%;
     margin: 1em 0 0 0; padding: 0;
+    position: relative;
     list-style-type: none;
+    overflow-y: scroll;
+}
+.cart-menu-items::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+.cart-menu-items::-webkit-scrollbar {
+    width: 6px;
+    background-color: transparent;
+}
+.cart-menu-items::-webkit-scrollbar-thumb {
+    background-color: hsla(var(--white), .33);
+    border-radius: 100vw;
 }
 .cart-menu-note {
     color: hsl(var(--white));
@@ -322,18 +337,41 @@ html, body {
     color: hsl(var(--white));
 }
 .cart-menu-text {
+    padding: 0 1.2em 0 0;
     width: 100%;
+    display: grid;
+    grid-template-columns: 1fr repeat(3, auto);
+    gap: .5em;
+    place-items: center flex-start;
     font-size: var(--paragraph);
     font-weight: 300;
 }
 .cart-menu-text span:first-child {
     padding: 0 3em 0 0;
+    max-width: 100%;
+    max-height: 1rem;
+    line-height: 1;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    white-space: normal;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 .cart-remove {
-    margin: 0 0 0 1em; padding: .2em .5em;
+    margin: 0 0 0 1em; padding: .66em;
     background-color: hsl(var(--primary));
-    border-radius: .1em;
+    border-radius: 50%;
     cursor: pointer;
+}
+.cart-remove svg {
+    width: .6em; height: .6em;
+}
+.cart-menu-total {
+    padding: .6em 0 0 0;
+    width: 100%;
+    color: hsl(var(--white));
+    border-top: 1px solid hsla(var(--white), .185);
 }
 /* Header */
 #header {
